chore(EventsHomepage): update title based on pagination, fix categories alignment

--- a/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_events.scss
+++ b/src/StockportWebapp/wwwroot/assets/sass/stockportgov/modules/_events.scss
@@ -188,6 +188,8 @@
         }   
 
         &-item {
+            margin-bottom: 0;
+            
             @media #{$tablet} {
                 margin-inline-start: 0;
             }      
